; ModuleID = '/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_mp_archive_check_fatal.c'
source_filename = "/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_mp_archive_check_fatal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_archive = type { i32 }

@ARCHIVE_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"fatal error received - closing archive\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_archive*, i32)* @mp_archive_check_fatal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_archive_check_fatal(%struct.mp_archive* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mp_archive*, align 8
  %5 = alloca i32, align 4
  store %struct.mp_archive* %0, %struct.mp_archive** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @ARCHIVE_FATAL, align 4
  %8 = icmp sgt i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %15

10:                                               ; preds = %2
  %11 = load %struct.mp_archive*, %struct.mp_archive** %4, align 8
  %12 = call i32 @MP_FATAL(%struct.mp_archive* %11, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.mp_archive*, %struct.mp_archive** %4, align 8
  %14 = call i32 @mp_archive_close(%struct.mp_archive* %13)
  store i32 1, i32* %3, align 4
  br label %15

15:                                               ; preds = %10, %9
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @MP_FATAL(%struct.mp_archive*, i8*) #1

declare dso_local i32 @mp_archive_close(%struct.mp_archive*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
